--- a/Individual-Project/templates/signin.html
+++ b/Individual-Project/templates/signin.html
@@ -51,9 +51,13 @@
         background-image: url('../static/d.gif');
         color: white;
         font-family: "Lucida Console", "Courier New", monospace;
-
+        
 
     }
+    label{
+        color: red;
+    }
+
     </style>
 </body>
 </html>
