--- a/Individual-Project/templates/signup.html
+++ b/Individual-Project/templates/signup.html
@@ -69,6 +69,9 @@
             color: white;
             font-family: "Lucida Console", "Courier New", monospace;
         }
+        label{
+            color: red;
+        }
        
     </style>
 </body>
