--- a/Individual-Project/templates/add.html
+++ b/Individual-Project/templates/add.html
@@ -12,10 +12,12 @@
    
     
     <form method="post" action="/add">
+
         <div>
         <label>Date</label>
         <div>
-            <input type="text"  name="date" id="date" required>
+        	<p>{{y}}</p>
+            <!-- <input type="text"  name="date" id="date" required> -->
         </div>
         </div>
         <div>
@@ -25,7 +27,7 @@
         </div>
         </div>
         <div>
-        <a href = "http://127.0.0.1:5000/all"><input type="submit"/></a>
+        <a href = "http://127.0.0.1:5000/all"><input type="submit" value="Submit" /></a>
         </center>
 
 
