--- a/Individual-Project/templates/signin.html
+++ b/Individual-Project/templates/signin.html
@@ -18,7 +18,7 @@
         <!-- Subheading -->
         <p >
         Please fill up your information below to sign in.
-        </p>
+        </p><br>
 
         <!-- Email -->
         <div>
@@ -26,7 +26,7 @@
             <div>
                 <input type="email"  name="email" id="emailStr" required>
             </div>
-        </div>
+        </div><br>
 
         <!-- Password -->
         <div>
@@ -34,11 +34,11 @@
             <div class="input-group">
                 <input type="password"  name="password" minlength="6">
             </div>
-        </div>
-        <br>
+        </div><br>
+        
         <!-- Button -->
         <div>
-            <input type="submit"/>
+            <input type="submit" value="Signin" />
         </div>
     </form>
     <br>
@@ -50,13 +50,13 @@
         body{
         background-image: url('../static/d.gif');
         color: white;
+        /*text-shadow: 2px 2px 5px red;*/
+        text-shadow: 0 0 3px #FF0000, 0 0 5px #0000FF;
         font-family: "Lucida Console", "Courier New", monospace;
         
 
     }
-    label{
-        color: red;
-    }
+   
 
     </style>
 </body>
