--- a/Individual-Project/templates/signup.html
+++ b/Individual-Project/templates/signup.html
@@ -20,46 +20,45 @@
             Please fill up your information below to sign up.
         </p>
 
-        <!-- Email -->
+        <!-- Email --><br>
         <div>
             <label>Email address*</label>
             <div>
                 <input type="email"  name="email" id="emailStr" required>
             </div>
-        </div>
-
+        </div><br>
         <!-- Password -->
         <div>
             <label>Password*</label>
             <div class="input-group">
                 <input type="password"  name="password" minlength="6">
             </div>
-        </div>
+        </div><br>
 
         <div>
             <label>Full name*</label>
             <div>
                 <input type="text"  name="full_name" id="full_name" required>
             </div>
-        </div>
+        </div><br>
 
         <div>
             <label>Username*</label>
             <div>
                 <input type="text"  name="username" id="username" required>
             </div>
-        </div>
+        </div><br>
 
    
         
         <!-- Button -->
         <div>
-            <input type="submit"/>
+            <input type="submit" value="Signup" />
         </div>
 
 
     </form>
-    <br>
+    <br><br>
     <button><a href="/"> signin </a></button>
     </center>
 
@@ -67,11 +66,13 @@
         body{
             background-image : url('../static/d.gif');
             color: white;
+            /*text-shadow: 2px 2px 5px red;*/
+            text-shadow: 0 0 3px #FF0000, 0 0 5px #0000FF;
             font-family: "Lucida Console", "Courier New", monospace;
         }
-        label{
+       /* label{
             color: red;
-        }
+        }*/
        
     </style>
 </body>
